# ORBSLAM_pointcloud

./: .gitignore  CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  build.sh  my_README.md  测试指令.txt
Examples/: kinect2.yaml  kinectdk_640.yaml  kinectdk_720 copy.yaml  kinectdk_720.yaml  pointcloud_TUM1 copy.yaml
Examples/ROS/orbslam2_pointcloud_ros/: CMakeLists.txt  package.xml
Examples/ROS/orbslam2_pointcloud_ros/launch/: mono_kinectdk.launch  rgbd_kinect2.launch  rgbd_kinectdk.launch
Examples/ROS/orbslam2_pointcloud_ros/src/: ros_mono.cc  ros_rgbd.cc
include/: Tracking.h
src/: System.cc  Tracking.cc  pointcloudmapping.cc
tools/: bin_vocabulary
